<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:layout_gravity="center_horizontal"	>

	<TextView 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" style="@style/mainFontLarge"
		android:text="@string/app_title" android:background="@drawable/title"
		android:padding="0dp" android:gravity="center_horizontal|center_vertical" />
	
	<RelativeLayout    
	    android:layout_height="wrap_content"
	   	android:layout_width="wrap_content"
	   	android:layout_centerInParent="true"
	   	android:padding="20dip"
	   	android:orientation="vertical">
	  
	<ToggleButton 
	    android:id="@+id/trackingButton" 
     	android:layout_width="120dp"
      	android:layout_height="wrap_content" 
      	android:textOn="@string/button_stop_tracking"
      	android:textOff="@string/button_start_tracking">	    
	</ToggleButton> 
				
	<Button
		android:id="@+id/mapButton"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		 android:onClick="iniciarMapa"
		android:layout_toRightOf="@+id/trackingButton" 
		android:text="@string/button_map" />	    
	</RelativeLayout>
	    <Button
        android:id="@+id/boton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:onClick="mostrarDatos"
        android:text="@string/Datos" />
         
</RelativeLayout>

