<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
	 <!-- Hay 3 botones para establecer parametros, uno para la hora inicial, final y fecha para la busqueda en la base de datos -->
	 <TableLayout
	    android:id="@+id/Tabla"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_vertical|center_horizontal">
    <TableRow android:gravity="center_vertical|center_horizontal">
    	<Button
        	android:id="@+id/HoraInicial"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/HoraInicialString" />
    	
    	<Button
        	android:id="@+id/HoraFinal"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/HoraFinalString"/>
	
		<Button
    	    android:id="@+id/Fecha"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/FechaString" />
    </TableRow>
    </TableLayout>
    
    <TableLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/Tabla"
    	android:layout_gravity="center_vertical|center_horizontal">
    <TableRow android:gravity="center_vertical|center_horizontal">
    	<TextView
	    android:id="@+id/textViewDistancia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloDistancia"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	 </TableRow>
	 <TableRow android:gravity="center_vertical|center_horizontal">
	 <EditText
        	android:id="@+id/cajaDistancia"
        	android:layout_width="150dp"
        	android:layout_height="40dp"
        	android:gravity="center_vertical|center_horizontal"
        	android:inputType="numberDecimal" >
    	</EditText>
    </TableRow>
	</TableLayout>
	 
</RelativeLayout>