<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:fillViewport="true">
	
    <!-- Se utiliza un elemento del tipo TimePicker para desplegar un validador de Tiempo, ademas, hay 3 botones, Aceptar, Reset y Cancelar -->
	<TimePicker android:id="@+id/TimePicker"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginLeft="5dip" android:layout_marginRight="5dip"/>
	
	<TableLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_vertical|center_horizontal"
    	android:layout_below = "@+id/TimePicker">
    <TableRow android:gravity="center_vertical|center_horizontal">
    	<Button
        	android:id="@+id/Aceptar"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/AceptarString"/>
    	
    	<Button
        	android:id="@+id/Reset"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/ResetString"/>
	
		<Button
    	    android:id="@+id/Cancelar"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/CancelarString"/>
    </TableRow>
	</TableLayout>
	
</RelativeLayout>